Updated swagger docs for auth, collection and retrieval apis. Adjustments to CDK to enable auth routes
